[package]
name = "animation-demo"
version = "0.1.0"
authors = ["Capucho <jcapucho7@gmail.com>"]
edition = "2018"

[workspace]
members = ["common"]
exclude = ["animations"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
wasmtime = { git = "https://github.com/bytecodealliance/wasmtime.git" }
vek = "0.11.0"
common = { path = "./common" }
bincode = "1.2"
anyhow = "1"
