[package]
name = "animations"
version = "0.1.0"
authors = ["Capucho <jcapucho7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
vek = "0.11.0"
common = { path = "../common" }
bincode = "1.2"
wee_alloc = "0.4.5"

[profile.release]
lto = true
opt-level = "s"
